<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2019, RTE (http://www.rte-france.com)
    This Source Code Form is subject to the terms of the Mozilla Public
    License, v. 2.0. If a copy of the MPL was not distributed with this
    file, You can obtain one at http://mozilla.org/MPL/2.0/.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.powsybl</groupId>
        <artifactId>powsybl-parent-ws</artifactId>
        <version>5</version>
        <relativePath/>
    </parent>

    <artifactId>powsybl-network-store</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Network store</name>
    <url>http://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-network-store.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-network-store.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-network-store</url>
    </scm>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Jon HARPER</name>
            <email>jon.harper@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>11</java.version>

        <!-- same as spring-boot-dependencies 2.2.7.RELEASE ; check when upgrading spring boot -->
        <cassandra-driver.version>3.7.2</cassandra-driver.version>

        <embedded-cassandra.version>3.1.0</embedded-cassandra.version>
        <!-- 4.13.1 is incompatible with spring-boot-starter-test -->
        <junit.version>4.13</junit.version>
        <lombok.version>1.18.10</lombok.version>
        <!-- downgrade of metrics-core needed for compatibility with cassandra-driver < 4 . To remove when we upgrade to >4 -->
        <metricscore.version>3.2.6</metricscore.version>
        <sirocco.version>1.0</sirocco.version>
        <springboot.version>2.4.7</springboot.version>
        <springfox.version>2.9.2</springfox.version>
        <swagger.version>1.6.0</swagger.version>
        <equalsverifier.version>3.5</equalsverifier.version>

        <powsybl-core.version>4.3.1</powsybl-core.version>
        <powsybl-single-line-diagram.version>2.3.0</powsybl-single-line-diagram.version>

        <sonar.coverage.jacoco.xmlReportPaths>
            ../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml,
            ../../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml,
            ../../../network-store-integration-test/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
    </properties>

    <modules>
        <module>network-store-client</module>
        <module>network-store-integration-test</module>
        <module>network-store-model</module>
        <module>network-store-server</module>
        <module>network-store-tools</module>
        <module>network-store-iidm-tck</module>
        <module>network-store-iidm-impl</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- overrides of imports -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>io.dropwizard.metrics</groupId>
                <artifactId>metrics-core</artifactId>
                <version>${metricscore.version}</version>
            </dependency>

            <!-- imports -->
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-core</artifactId>
                <version>${powsybl-core.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- project specific dependencies (also overrides imports, but separate for clarity) -->
            <dependency>
              <groupId>nl.jqno.equalsverifier</groupId>
              <artifactId>equalsverifier</artifactId>
              <version>${equalsverifier.version}</version>
            </dependency>
            <dependency>
              <groupId>com.powsybl</groupId>
              <artifactId>powsybl-single-line-diagram-iidm-extensions</artifactId>
              <version>${powsybl-single-line-diagram.version}</version>
            </dependency>
            <dependency>
              <groupId>com.github.nosan</groupId>
              <artifactId>embedded-cassandra-spring-test</artifactId>
              <version>${embedded-cassandra.version}</version>
            </dependency>
            <dependency>
              <groupId>com.datastax.cassandra</groupId>
              <artifactId>cassandra-driver-extras</artifactId>
              <version>${cassandra-driver.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${springfox.version}</version>
                <!-- To workaround issue https://github.com/springfox/springfox/issues/2265 -->
                <exclusions>
                    <exclusion>
                        <groupId>io.swagger</groupId>
                        <artifactId>swagger-annotations</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.swagger</groupId>
                        <artifactId>swagger-models</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger</groupId>
                <artifactId>swagger-models</artifactId>
                <version>${swagger.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.sirocco</groupId>
                <artifactId>sirocco-text-table-formatter</artifactId>
                <version>${sirocco.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>log4j</groupId>
                        <artifactId>log4j</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <classpathDependencyExcludes>
                            <classpathDependencyExclude>com.powsybl:powsybl-config-classic</classpathDependencyExclude>
                        </classpathDependencyExcludes>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>client</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>network-store-model</module>
                <module>network-store-client</module>
            </modules>
        </profile>
        <profile>
            <id>proxy</id>
            <activation>
              <property>
                <name>proxyHost</name>
              </property>
            </activation>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>
                            <configuration>
                                <systemPropertyVariables>
                                    <proxyHost>${proxyHost}</proxyHost>
                                    <proxyPort>${proxyPort}</proxyPort>
                                    <proxyUser>${proxyUser}</proxyUser>
                                    <proxyPassword>${proxyPassword}</proxyPassword>
                                    <jdk.http.auth.tunneling.disabledSchemes></jdk.http.auth.tunneling.disabledSchemes>
                                </systemPropertyVariables>
                            </configuration>
                        </plugin>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <configuration>
                                <systemPropertyVariables>
                                    <proxyHost>${proxyHost}</proxyHost>
                                    <proxyPort>${proxyPort}</proxyPort>
                                    <proxyUser>${proxyUser}</proxyUser>
                                    <proxyPassword>${proxyPassword}</proxyPassword>
                                    <jdk.http.auth.tunneling.disabledSchemes></jdk.http.auth.tunneling.disabledSchemes>
                                </systemPropertyVariables>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>
    </profiles>

</project>
